Avoid action wrapping (render in a single row).

--- a/packages/kiwi-react/src/bricks/Tree.css
+++ b/packages/kiwi-react/src/bricks/Tree.css
@@ -84,6 +84,7 @@
 	inset-inline-end: 0;
 	padding-inline-end: 4px;
 	background-color: var(--kiwi-color-bg-surface-primary);
+	display: inline-flex;
 
 	&::before {
 		position: absolute;
